display bakeries on map in almost static way

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,10 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/html5-reset.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    meta(name='viewport',content='initial-scale=1.0, user-scalable=no')head
-    script(type='text/javascript',src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBHlR7o6BKMcYbIfDA9-YOmCtJ6jqTm218&sensor=true')
+    meta(name='viewport',content='initial-scale=1.0, user-scalable=no')
+    link(rel="stylesheet",href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css")
+    script(src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js")
     script(type='text/javascript',src='javascripts/index.js')
 
-cloudmade api key      553fcdd9327a493e847991b2074535c0
 block content
-  #map-canvas
+  #map
