make welcome page

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,8 +4,14 @@ html
 body	
   height: 100%
   font: "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
 
 #map
   height: 100%
+  display:none
+
+#welcome
+  text-align: center
+  height: 100%
+  cursor:pointer
+  padding: 20px 50px
+  background:url('../images/background.png') no-repeat 50% 50%
