--- a/views/index.jade
+++ b/views/index.jade
@@ -10,4 +10,8 @@ html
     script(type='text/javascript',src='javascripts/index.js')
 
 block content
+  #welcome()
+        h1 Trouver les boulangeries ouvertes aux alentours
+        p En tenant compte des congés annuels et des jours de fermetures réglementaires en Île-de-France
+        p (Cliquer sur le texte)
   #map
