Ajout du lien github

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -12,6 +12,14 @@ body
 #welcome
   text-align: center
   height: 100%
-  cursor:pointer
   padding: 20px 50px
   background:url('../images/background.png') no-repeat 50% 50%
+
+.clickable
+
+  cursor:pointer
+
+#foot
+    position:absolute
+    bottom:20px
+    right:20px
