--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
 block content
   #welcome()
         h1.clickable Trouver les boulangeries ouvertes aux alentours
-        p.clickable En tenant compte des congés annuels et des jours de fermetures réglementaires en Île-de-France
+        p.clickable En tenant compte des congés annuels et des jours de fermeture réglementaire en Île-de-France
         p.clickable (Cliquer sur le texte)
         #foot
             a(href='http://github.com/wadouk/trouverdupain')
