--- a/views/index.jade
+++ b/views/index.jade
@@ -14,9 +14,11 @@ block content
         h1.clickable Trouver les boulangeries ouvertes aux alentours
         p.clickable En tenant compte des congés annuels et des jours de fermeture réglementaire en Île-de-France
         p.clickable (Cliquer sur le texte)
-        form(id='addrform')
-            input(type='text',id='addr',name='addr',placeholder='Une adresse')
-            button(type=button) Locate
+        img.clickable(src='http://cdn.leafletjs.com/leaflet-0.5/images/marker-icon.png')
+        p Ou chercher une adresse
+        form#addrform
+            input#addr(type='text',name='addr',placeholder='Une adresse')
+            button(type=button) Autour d'une adresse
         #foot
             a(href='http://github.com/wadouk/trouverdupain')
                 img(src='images/github.jpg')
