change: use mapbox instead of cloudmade

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,8 @@ html
     meta(name='viewport',content='initial-scale=1.0, user-scalable=no')
     link(rel="stylesheet",href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css")
     script(src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js")
+    script(src="https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js")
+    link(href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css',rel='stylesheet')
     script(type='text/javascript',src='javascripts/index.js')
 
 block content
