--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html
     script(src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js")
     script(src="https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js")
     link(href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css',rel='stylesheet')
-    script(type='text/javascript',src='javascripts/index.js')
+    script(type='text/javascript',src='javascripts/browser.js')
 
 block content
   #welcome()
