if points are too close, merge together

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,9 +7,10 @@ body
 
 #map
   height: 100%
+#control
   display:none
-
-#welcome
+#about
+  display:none
   text-align: center
   height: 100%
   padding: 20px 50px
