--- a/views/index.jade
+++ b/views/index.jade
@@ -5,23 +5,22 @@ html
     link(rel='stylesheet', href='/stylesheets/html5-reset.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name='viewport',content='initial-scale=1.0, user-scalable=no')
-    link(rel="stylesheet",href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css")
-    script(src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js")
-    script(src="https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js")
-    link(href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css',rel='stylesheet')
+    link(rel="stylesheet",href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css")
+    script(type='text/javascript',src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js")
+    script(type='text/javascript',src="https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.js")
+    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css",rel="stylesheet")
     script(type='text/javascript',src='javascripts/browser.js')
 
 block content
-  #welcome()
-        h1.clickable Trouver les boulangeries ouvertes aux alentours
-        p.clickable En tenant compte des congés annuels et des jours de fermeture réglementaire en Île-de-France
-        p.clickable (Cliquer sur le texte)
-        img.clickable(src='http://cdn.leafletjs.com/leaflet-0.5/images/marker-icon.png')
-        p Ou chercher une adresse
-        form#addrform
-            input#addr(type='text',name='addr',placeholder='Une adresse')
-            button(type=button) Autour d'une adresse
-        #foot
-            a(href='http://github.com/wadouk/trouverdupain')
-                img(src='images/github.jpg')
   #map
+  #about()
+      h1.clickable Trouver les boulangeries ouvertes aux alentours
+      p.clickable En tenant compte des congés annuels et des jours de fermeture réglementaire en Île-de-France
+      p.clickable (Cliquer sur le texte)
+      #foot
+          a(href='http://github.com/wadouk/trouverdupain')
+              img(src='images/github.jpg')
+  #control
+      form#addrform
+          input#addr(type='text',name='addr',placeholder='Une adresse')
+          button(type=button) Autour d'une adresse
