--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html
     script(type='text/javascript',src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js")
     script(type='text/javascript',src="https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.js")
     link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css",rel="stylesheet")
-    script(type='text/javascript',src='javascripts/browser.js')
+    script(type='text/javascript',src='bundle.js')
 
 block content
   #map
